Added header and profile section

--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
     <h2 class="important">
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
+    <img src = "images\violet.png" class=photo usemap="#petals" height = 408px width = 612px>
+    <hr width = 50% color = white>
+    <div class=profile>
+      <h1><a name="PROFILE">profile<img src="images/sun.png"></a></h1>
+      <p>Born on February 14, 2002. Grew up in Al-Khobar, Saudi Arabia as an introverted kid;
+        Spoiled brat turned aspiring optimist - only took 18 years to get off her ass and start opening her eyes 
+        and see the beauty in grabbing change by its balls and owning it. Now a local Filipino weeb coding and 
+        watching anime like a hermit in quarantine, hence all this lol. Questioning bisexual INFP insert-other-
+        complicated-sounding-qualities-etc. 
+      </p>
+    </div>
   </body>
 </html>
