Added pictures to header and profile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2 class="important">
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
-    <img src = "images\violet.png" class=photo usemap="#petals" height = 408px width = 612px>
+    <img src = "images/violet.png" class=photo usemap="#petals" height = 408px width = 612px>
     <hr width = 50% color = white>
     <div class=profile>
       <h1><a name="PROFILE">profile<img src="images/sun.png"></a></h1>
