--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
     <img src = "images/violet.png" class=photo usemap="#petals" height = 408px width = 612px>
+    <map name="petals">
+      <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE">
+      <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS">
+      <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES">
+      <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY">
+      <area shape="circle" coords="336,303,50" alt="bud5" href="">
+    </map>
     <hr width = 50% color = white>
     <div class=profile>
       <h1><a name="PROFILE">profile<img src="images/sun.png"></a></h1>
