Added likes and dislikes section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,44 @@
         complicated-sounding-qualities-etc. 
       </p>
     </div>
+    <h1 class=right><a name="LDS"><img src="images/moonstar.png">likes&dislikes</a></h1>
+      <div class=lds>
+      <table>
+        <tr>
+          <th>likes</th>
+          <th>dislikes</th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li>purple/violet things
+              <li>choker + boots combi outfits
+              <li>turtlenecks
+              <li>sweets
+              <li>wine
+              <li>coffee
+              <li>stuffed toys
+              <li>most animals
+              <li>the sky in general
+              <li>travel/trips
+            </ul>
+          </td>
+          <td>
+            <ul>
+              <li>insects (pests moreso)
+              <li>hot weather
+              <li>itchy skin
+              <li>oily food
+              <li>being late
+              <li>public parties
+              <li>sleeping alone
+              <li>the dark
+              <li>getting ahead of myself
+              <li>awkwardness
+             </ul>
+          </td>
+        </tr>
+      </table>
+      </div>
   </body>
 </html>
