Added hobbies section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,25 @@
         </tr>
       </table>
       </div>
+      <div class=hobbies>
+        <h1><a name="HOBBIES">hobbies<img src="images/naruto.png"></a></h1>
+        <table class=box>
+          <tr>
+            <th>i like to...</th>
+          </tr>
+          <tr>
+            <td>
+              <ul>
+                <li>watch anime and agonize over my favs
+                <li>play video games and salt-swear like a sailor
+                <li>listen to music and screech like a banshee
+                <li>draw fanart and fail anatomy/proportions
+                <li>write fics and overanalyze my favs
+              </ul>
+            </td>
+          </tr>
+        </table>
+        <p class=corner>currently obsessed with: naruto, p5r, gacha games</p>
+      </div>
   </body>
 </html>
