Added family section

--- a/index.html
+++ b/index.html
@@ -85,5 +85,8 @@
         </table>
         <p class=corner>currently obsessed with: naruto, p5r, gacha games</p>
       </div>
+      <h1 class=right><a name="FAMILY"><img src="images/home.png">family</a></h1>
+      <div class=fam>
+      </div>
   </body>
 </html>
