Added favicon and link to css stylesheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>物の哀れ; beauty of transience</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="images/flower.png">
   </head>
   <body>
     <h1 class="important">dana andrea espejo callejo</h1>
