Added content to family section and its respective styling

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <title>物の哀れ; beauty of transience</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="images/flower.png">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
     <h1 class="important">dana andrea espejo callejo</h1>
@@ -10,26 +10,39 @@
     <h2 class="important">
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
-    <img src = "images/violet.png" class=photo usemap="#petals" height = 408px width = 612px>
+    <img
+      src="images/violet.png"
+      class="photo"
+      usemap="#petals"
+      height="408px"
+      width="612px"
+    />
     <map name="petals">
-      <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE">
-      <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS">
-      <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES">
-      <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY">
-      <area shape="circle" coords="336,303,50" alt="bud5" href="">
+      <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE" />
+      <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
+      <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
+      <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
+      <area shape="circle" coords="336,303,50" alt="bud5" href="" />
     </map>
-    <hr width = 50% color = white>
-    <div class=profile>
-      <h1><a name="PROFILE">profile<img src="images/sun.png"></a></h1>
-      <p>Born on February 14, 2002. Grew up in Al-Khobar, Saudi Arabia as an introverted kid;
-        Spoiled brat turned aspiring optimist - only took 18 years to get off her ass and start opening her eyes 
-        and see the beauty in grabbing change by its balls and owning it. Now a local Filipino weeb coding and 
-        watching anime like a hermit in quarantine, hence all this lol. Questioning bisexual INFP insert-other-
-        complicated-sounding-qualities-etc. 
+    <hr width="50%" color="white" />
+    <div class="profile">
+      <h1>
+        <a name="PROFILE">profile<img src="images/sun.png"/></a>
+      </h1>
+      <p>
+        Born on February 14, 2002. Grew up in Al-Khobar, Saudi Arabia as an
+        introverted kid; Spoiled brat turned aspiring optimist - only took 18
+        years to get off her ass and start opening her eyes and see the beauty
+        in grabbing change by its balls and owning it. Now a local Filipino weeb
+        coding and watching anime like a hermit in quarantine, hence all this
+        lol. Questioning bisexual INFP insert-other-
+        complicated-sounding-qualities-etc.
       </p>
     </div>
-    <h1 class=right><a name="LDS"><img src="images/moonstar.png">likes&dislikes</a></h1>
-      <div class=lds>
+    <h1 class="right">
+      <a name="LDS"><img src="images/moonstar.png" />likes&dislikes</a>
+    </h1>
+    <div class="lds">
       <table>
         <tr>
           <th>likes</th>
@@ -38,57 +51,65 @@
         <tr>
           <td>
             <ul>
-              <li>purple/violet things
-              <li>choker + boots combi outfits
-              <li>turtlenecks
-              <li>sweets
-              <li>wine
-              <li>coffee
-              <li>stuffed toys
-              <li>most animals
-              <li>the sky in general
-              <li>travel/trips
+              <li>purple/violet things</li>
+              <li>choker + boots combi outfits</li>
+              <li>turtlenecks</li>
+              <li>sweets</li>
+              <li>wine</li>
+              <li>coffee</li>
+              <li>stuffed toys</li>
+              <li>most animals</li>
+              <li>the sky in general</li>
+              <li>travel/trips</li>
             </ul>
           </td>
           <td>
             <ul>
-              <li>insects (pests moreso)
-              <li>hot weather
-              <li>itchy skin
-              <li>oily food
-              <li>being late
-              <li>public parties
-              <li>sleeping alone
-              <li>the dark
-              <li>getting ahead of myself
-              <li>awkwardness
-             </ul>
+              <li>insects (pests moreso)</li>
+              <li>hot weather</li>
+              <li>itchy skin</li>
+              <li>oily food</li>
+              <li>being late</li>
+              <li>public parties</li>
+              <li>sleeping alone</li>
+              <li>the dark</li>
+              <li>getting ahead of myself</li>
+              <li>awkwardness</li>
+            </ul>
           </td>
         </tr>
       </table>
-      </div>
-      <div class=hobbies>
-        <h1><a name="HOBBIES">hobbies<img src="images/naruto.png"></a></h1>
-        <table class=box>
-          <tr>
-            <th>i like to...</th>
-          </tr>
-          <tr>
-            <td>
-              <ul>
-                <li>watch anime and agonize over my favs
-                <li>play video games and salt-swear like a sailor
-                <li>listen to music and screech like a banshee
-                <li>draw fanart and fail anatomy/proportions
-                <li>write fics and overanalyze my favs
-              </ul>
-            </td>
-          </tr>
-        </table>
-        <p class=corner>currently obsessed with: naruto, p5r, gacha games</p>
-      </div>
-      <h1 class=right><a name="FAMILY"><img src="images/home.png">family</a></h1>
-      <div class=fam>
-      </div>
+    </div>
+    <div class="hobbies">
+      <h1>
+        <a name="HOBBIES">hobbies<img src="images/naruto.png"/></a>
+      </h1>
+      <table class="box">
+        <tr>
+          <th>i like to...</th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li>watch anime and agonize over my favs</li>
+              <li>play video games and salt-swear like a sailor</li>
+              <li>listen to music and screech like a banshee</li>
+              <li>draw fanart and fail anatomy/proportions</li>
+              <li>write fics and overanalyze my favs</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+
+      <p class="corner">currently obsessed with: naruto, p5r, gacha games</p>
+    </div>
+    <h1 class="right">
+      <a name="FAMILY"><img src="images/home.png" />family</a>
+    </h1>
+    <div class="fam"></div>
+    <h3 class="important">
+      “The family is the test of freedom; because the family is the only thing
+      that the free man makes for himself and by himself.” – G.K. Chesterton
+    </h3>
   </body>
 </html>
