Added more content to family section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="important">dana andrea espejo callejo</h1>
-    <hr width="35%" color="white" />
+    <hr width="35%" />
     <h2 class="important">
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
@@ -24,7 +24,7 @@
       <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
       <area shape="circle" coords="336,303,50" alt="bud5" href="" />
     </map>
-    <hr width="50%" color="white" />
+    <hr width="50%" />
     <div class="profile">
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png"/></a>
@@ -111,5 +111,30 @@
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
+    <hr width="50%" />
+    <div class="paragraph">
+      <b>WARNING: Idiot doesn't actually introduce family because: privacy reasons, gurl.</b>
+      <hr width=35%>
+      Being a family full of - for a lack of better word - sheltered introverts,
+      life isn't always as exciting or adventurous as others' lives, especially
+      now with the very precarious situation and circumstances taking over the
+      world at this very moment; But nevertheless we're currently trying to do
+      our best to support and grow properly into the selves we desperately
+      strive to be, which, is quite frankly, a challenge in of itself (think
+      <i>Arabidopsis thaliana</i> (plant with the shortest lifespan) trying to
+      become as independent and self-sustaining as cacti. Yup, <i>that</i> much
+      of a stretch.) Seems practically impossible - absurd even, considering
+      it's extremely difficult to move on from the norm and step out into the
+      unknown - even more so when each and every individual (myself included)
+      can be very...<i>trying</i> at times; But crying on your ass and staying
+      idle like sitting ducks never solved anything - which brings me to the
+      main theme of my site here -
+      <i>物の哀れ [Mono no aware], the beauty of transience.</i>
+    </div>
+    <p>
+      <i>Mono no aware,</i> the Japanese love for impermanence, is literally
+      what it means - appreciating the beauty of the feeling of "fleeting";
+      everlasting change.
+    </p>
   </body>
 </html>
