--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="important">dana andrea espejo callejo</h1>
-    <hr width="35%" />
+    <hr width="35%" color="white"/>
     <h2 class="important">
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
@@ -24,7 +24,7 @@
       <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
       <area shape="circle" coords="336,303,50" alt="bud5" href="" />
     </map>
-    <hr width="50%" />
+    <hr width="50%" color="white"/>
     <div class="profile">
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png"/></a>
@@ -114,7 +114,7 @@
     <hr width="50%" />
     <div class="paragraph">
       <b>WARNING: Idiot doesn't actually introduce family because: privacy reasons, gurl.</b>
-      <hr width=35%>
+      <hr width=35% color="white">
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
