Appropriated selector name and fixed styling

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
-    <hr width="50%" />
-    <div class="paragraph">
+    <hr width="50%" color="white"/>
+    <div class="famspeech">
       <b>WARNING: Idiot doesn't actually introduce family because: privacy reasons, gurl.</b>
       <hr width=35% color="white">
       Being a family full of - for a lack of better word - sheltered introverts,
