--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
-    <hr width="50%" color="white"/>
+    <hr width="100%" color="white"/>
     <div class="famspeech">
       <b>WARNING: Idiot doesn't actually introduce family because: privacy reasons, gurl.</b>
       <hr width=35% color="white">
+      <img src="images/primrose.png">
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
