Fixed family section photo dimensions and adjusted styling for paragraph

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="important">dana andrea espejo callejo</h1>
-    <hr width="35%" color="white"/>
+    <hr width="35%" color="white" />
     <h2 class="important">
       "Inexperienced, heartless, but even so... Be beautiful."
     </h2>
@@ -24,7 +24,7 @@
       <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
       <area shape="circle" coords="336,303,50" alt="bud5" href="" />
     </map>
-    <hr width="50%" color="white"/>
+    <hr width="50%" color="white" />
     <div class="profile">
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png"/></a>
@@ -111,11 +111,19 @@
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
-    <hr width="100%" color="white"/>
+    <hr width="100%" color="white" />
     <div class="famspeech">
-      <b>WARNING: Idiot doesn't actually introduce family because: privacy reasons, gurl.</b>
-      <hr width=35% color="white">
-      <img src="images/primrose.png">
+      <b
+        >WARNING: Idiot doesn't actually introduce family because: privacy
+        reasons, gurl.</b
+      >
+      <hr width="35%" color="white" />
+      <img
+        src="images/primrose.png"
+        height="612px"
+        width="408px"
+        style="float:right;"
+      />
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
