Added caption to family photo and changed size

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
     <div class="fam"></div>
+    <p>
+      (From left to right)My dad, my mom, me (youngest), my sister's boyfriend,
+      my sister (eldest), and my brother (middle child).
+    </p>
     <h3 class="important">
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
@@ -118,12 +122,7 @@
         reasons, gurl.</b
       >
       <hr width="35%" color="white" />
-      <img
-        src="images/primrose.png"
-        height="612px"
-        width="408px"
-        style="float:right;"
-      />
+      <img src="images/primrose.png" style="float:right;" />
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
