Adjusted line height and photo opacity

--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
         reasons, gurl.</b
       >
       <hr width="35%" color="white" />
-      <img src="images/primrose.png" style="float:right;" />
+      <img
+        src="images/primrose.png"
+        style="float:right; opacity: 0.75; margin-left: 30px;"
+      />
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
