--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
       <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
       <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
-      <area shape="circle" coords="336,303,50" alt="bud5" href="" />
+      <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
     </map>
     <hr width="50%" color="white" />
     <div class="profile">
       <h1>
-        <a name="PROFILE">profile<img src="images/sun.png"/></a>
+        <a name="PROFILE">profile<img src="images/sun.png" /></a>
       </h1>
       <p>
         Born on February 14, 2002. Grew up in Al-Khobar, Saudi Arabia as an
@@ -82,7 +82,7 @@
     </div>
     <div class="hobbies">
       <h1>
-        <a name="HOBBIES">hobbies<img src="images/naruto.png"/></a>
+        <a name="HOBBIES">hobbies<img src="images/naruto.png" /></a>
       </h1>
       <table class="box">
         <tr>
@@ -119,7 +119,7 @@
     <div class="famspeech">
       <img
         src="images/primrose.png"
-        style="float:right; opacity: 0.5; margin-left: 30px;"
+        style="float: right; opacity: 0.5; margin-left: 30px;"
       />
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
@@ -142,5 +142,8 @@
       what it means - appreciating the beauty of the feeling of "fleeting";
       everlasting change.
     </p>
+    <h1 class="dreams">
+      <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
+    </h1>
   </body>
 </html>
