--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       everlasting change.
     </p>
     <h1 class="dreams">
-      <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
+      <a name="DREAMS">hopes&dreams<img src="images/tech.png"</a>
     </h1>
   </body>
 </html>
