Changed hopes & dreams icon, removed flower photo

--- a/index.html
+++ b/index.html
@@ -117,10 +117,6 @@
     </h3>
     <hr width="100%" color="white" />
     <div class="famspeech">
-      <img
-        src="images/primrose.png"
-        style="float: right; opacity: 0.5; margin-left: 30px;"
-      />
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
@@ -143,7 +139,7 @@
       everlasting change.
     </p>
     <h1 class="dreams">
-      <a name="DREAMS">hopes&dreams<img src="images/tech.png"</a>
+      <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
     </h1>
   </body>
 </html>
