Added photos to hopes&dreams section

--- a/index.html
+++ b/index.html
@@ -138,8 +138,13 @@
       what it means - appreciating the beauty of the feeling of "fleeting";
       everlasting change.
     </p>
-    <h1 class="dreams">
-      <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
-    </h1>
+    <div class="dreams">
+      <h1>
+        <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
+      </h1>
+      <p><img src="images/jp.gif" /></p>
+      <div class="box"><img src="images/keyboard.gif"</div>
+      <div class="corner"><img src="images/jp.gif"</div>
+    </div>
   </body>
 </html>
