--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <h1>
         <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
       </h1>
-      <p class="purple"><img src="images/draw.gif" /></p>
+      <div class="purple"><img src="images/draw.gif"/></div>
       <div class="box"><img src="images/keyboard.gif"</div>
       <div class="corner"><img src="images/jp.gif"</div>
     </div>
