--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
       <h1>
         <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
       </h1>
-      <div class="purple"><img src="images/draw.gif"/></div>
-      <div class="box"><img src="images/keyboard.gif"</div>
+      <div class="purple"><img src="images/draw.gif" style="opacity: 0.75;"/></div>
+      <div class="blue"><img src="images/keyboard.gif"</div>
       <div class="corner"><img src="images/jp.gif"</div>
     </div>
   </body>
