Fixed code typo in hopes & dreams section

--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
     </p>
     <div class="dreams">
       <h1>
-        <a name="DREAMS">hopes&dreams<img src="images/heart.png"</a>
+        <a name="DREAMS">hopes&dreams<img src="images/heart.png"></a>
       </h1>
       <div class="purple"><img src="images/draw.gif" style="opacity: 0.75;"/></div>
-      <div class="blue"><img src="images/keyboard.gif"</div>
-      <div class="corner"><img src="images/jp.gif"</div>
+      <div class="blue"><img src="images/keyboard.gif"></div>
+      <div class="corner"><img src="images/jp.gif"></div>
     </div>
   </body>
 </html>
