Readjusted positioning of photos under hopes & dreams

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <a name="DREAMS">hopes&dreams<img src="images/heart.png"></a>
       </h1>
       <div class="purple"><img src="images/draw.gif" style="opacity: 0.75;"/></div>
-      <div class="blue"><img src="images/keyboard.gif"></div>
-      <div class="corner"><img src="images/jp.gif"></div>
+      <div class="blue"><img src="images/keyboard.gif" style="opacity: 0.75;"></div>
+      <div class="pink"><img src="images/jp.gif" style="opacity: 0.75;"></div>
     </div>
   </body>
 </html>
