Changed positioning of keyboard.gif and removed unnecessary div

--- a/index.html
+++ b/index.html
@@ -140,11 +140,15 @@
     </p>
     <div class="dreams">
       <h1>
-        <a name="DREAMS">hopes&dreams<img src="images/heart.png"></a>
+        <a name="DREAMS"
+          >hopes&dreams<img src="images/heart.png" />
+          <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue"
+        /></a>
       </h1>
-      <div class="purple"><img src="images/draw.gif" style="opacity: 0.75;"/></div>
-      <div class="blue"><img src="images/keyboard.gif" style="opacity: 0.75;"></div>
-      <div class="pink"><img src="images/jp.gif" style="opacity: 0.75;"></div>
+      <div class="purple">
+        <img src="images/draw.gif" style="opacity: 0.75;" />
+      </div>
+      <div class="pink"><img src="images/jp.gif" style="opacity: 0.75;" /></div>
     </div>
   </body>
 </html>
