Added text box next to photos under hopes & dreams

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
     <hr width="100%" color="white" />
-    <div class="famspeech">
+    <div class="speech">
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
@@ -145,6 +145,17 @@
           <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue"
         /></a>
       </h1>
+      <div class="speech" style="font-size: 18px;">
+        I aspire to be a bonafide passionate web and game developer. Being
+        completely enamored with video games and technology ever since I was a
+        kid, I decided one day that I'd stop trying to repress my love for them
+        in the form of actually taking up a career in technology - so here I am!
+        Jumpy college freshman to be trying to practice ahead of school season
+        lol. More importantly though, I'm trying to make it my goal to
+        constantly challenge and improve myself - Self-improvement and
+        self-love, full speed ahead! I can't adopt to an ever-changing world if
+        I don't try to dare to match its pace, after all.
+      </div>
       <div class="purple">
         <img src="images/draw.gif" style="opacity: 0.75;" />
       </div>
