Adjusted padding and positioning of text under div dreams

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue"
         /></a>
       </h1>
-      <div class="speech" style="font-size: 18px;">
+      <div class="speech" style="font-size: 20px; padding: 5px; float: left;">
         I aspire to be a bonafide passionate web and game developer. Being
         completely enamored with video games and technology ever since I was a
         kid, I decided one day that I'd stop trying to repress my love for them
