Repositioned initial photo and text under hopes and dreams

--- a/index.html
+++ b/index.html
@@ -140,14 +140,11 @@
     </p>
     <div class="dreams">
       <h1>
-        <a name="DREAMS"
-          >hopes&dreams<img src="images/heart.png" />
-          <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue"
-        /></a>
+        <a name="DREAMS">hopes&dreams<img src="images/heart.png" /></a>
       </h1>
       <div
         class="speech"
-        style="font-size: 20px; padding: 15px; text-align: left; margin-right: 50%;"
+        style="font-size: 20px; padding: 15px; display: inline-block;"
       >
         I aspire to be a bonafide passionate web and game developer. Being
         completely enamored with video games and technology ever since I was a
@@ -159,6 +156,7 @@
         self-love, full speed ahead! I can't adopt to an ever-changing world if
         I don't try to dare to match its pace, after all.
       </div>
+      <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue" />
       <div class="purple">
         <img src="images/draw.gif" style="opacity: 0.75;" />
       </div>
