--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </h1>
       <div
         class="speech"
-        style="font-size: 20px; padding: 15px; width: 300px;"
+        style="font-size: 20px; padding: 15px; float: left;"
       >
         I aspire to be a bonafide passionate web and game developer. Being
         completely enamored with video games and technology ever since I was a
