Set a fixed height for text box under hopes&dreams

--- a/index.html
+++ b/index.html
@@ -142,10 +142,7 @@
       <h1>
         <a name="DREAMS">hopes&dreams<img src="images/heart.png" /></a>
       </h1>
-      <div
-        class="speech"
-        style="font-size: 20px; padding: 15px; float: left;"
-      >
+      <div class="speech" style="font-size: 20px; padding: 25px;" width=300px height=300px>
         I aspire to be a bonafide passionate web and game developer. Being
         completely enamored with video games and technology ever since I was a
         kid, I decided one day that I'd stop trying to repress my love for them
@@ -154,7 +151,8 @@
         lol. More importantly though, I'm trying to make it my goal to
         constantly challenge and improve myself - Self-improvement and
         self-love, full speed ahead! I can't adopt to an ever-changing world if
-        I don't try to dare to match its pace, after all.
+        I don't try to dare to match its pace, after all. I also hope to visit
+        Japan one day!
       </div>
       <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue" />
       <div class="purple">
