Reapplied word-wrap to text

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <h1>
         <a name="DREAMS">hopes&dreams<img src="images/heart.png" /></a>
       </h1>
-      <div class="speech" style="font-size: 20px; padding: 25px;" width=150px height=150px>
+      <div class="speech" style="font-size: 20px; padding: 25px; word-wrap: break-word;" width=150px height=150px>
         I aspire to be a bonafide passionate web and game developer. Being
         completely enamored with video games and technology ever since I was a
         kid, I decided one day that I'd stop trying to repress my love for them
