Revised block of text; added overflow property

--- a/index.html
+++ b/index.html
@@ -142,17 +142,20 @@
       <h1>
         <a name="DREAMS">hopes&dreams<img src="images/heart.png" /></a>
       </h1>
-      <div class="speech" style="font-size: 20px; padding: 25px; word-wrap: break-word;" width=150px height=150px>
-        I aspire to be a bonafide passionate web and game developer. Being
-        completely enamored with video games and technology ever since I was a
-        kid, I decided one day that I'd stop trying to repress my love for them
-        in the form of actually taking up a career in technology - so here I am!
-        Jumpy college freshman to be trying to practice ahead of school season
-        lol. More importantly though, I'm trying to make it my goal to
-        constantly challenge and improve myself - Self-improvement and
-        self-love, full speed ahead! I can't adopt to an ever-changing world if
-        I don't try to dare to match its pace, after all. I also hope to visit
-        Japan one day!
+      <div
+        class="speech"
+        style="font-size: 18px; padding: 25px; word-wrap: break-word; overflow: auto;"
+        width="150px"
+        height="150px"
+      >
+        I aspire to be a bonafide passionate web and game developer. Completely
+        enamored with video games and technology ever since I was a kid, I
+        decided one day I'd stop repressing my love for them and actually take
+        up a career in technology - so here I am! Jumpy college freshman to be,
+        trying to practice ahead of school season lol. Í'm also in the process
+        of reforming myself - Self-improvement and self-love, full speed ahead!
+        I can't adopt to an ever-changing world if I don't try to dare to match
+        its pace, after all. I also hope to visit Japan one day!
       </div>
       <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue" />
       <div class="purple">
