Changed text under hopes & dreams display to inline

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </h1>
       <div
         class="speech"
-        style="font-size: 18px; padding: 25px; word-wrap: break-word; overflow: auto;"
+        style="font-size: 18px; padding: 25px; display: inline;"
         width="150px"
         height="150px"
       >
