Changed width and removed height for transparent text box under h&d and added margins

--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
       </h1>
       <div
         class="speech"
-        style="font-size: 18px; padding: 25px; display: inline;"
-        width="150px"
-        height="150px"
+        style="font-size: 18px; padding: 25px; margin: 0 20px 20px 0;"
+        width="100px"
       >
         I aspire to be a bonafide passionate web and game developer. Completely
         enamored with video games and technology ever since I was a kid, I
