Changed margin measurements for transparent text box

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </h1>
       <div
         class="speech"
-        style="font-size: 18px; padding: 25px; margin: 0 20px 20px 0;"
+        style="font-size: 18px; padding: 25px; margin: 0 50% 10% 0;"
         width="100px"
       >
         I aspire to be a bonafide passionate web and game developer. Completely
