--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
       </h1>
       <div
         class="speech"
-        style="font-size: 18px; padding: 25px; margin: 0 50% 10% 0;"
-        width="100px"
+        style="font-size: 14px; padding: 15px 50% 20px 15px; float: left;"
+        width="150px"
+        height="150px"
       >
         I aspire to be a bonafide passionate web and game developer. Completely
         enamored with video games and technology ever since I was a kid, I
