Text box: Changed padding,  retesting application of word-wrap

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </h1>
       <div
         class="speech"
-        style="font-size: 14px; padding: 15px 50% 20px 15px; float: left;"
+        style="font-size: 18px; padding: 15px 15px 20px 15px; float: left; word-wrap: break-word;"
         width="150px"
         height="150px"
       >
