Removed inline css, replaced jp.gif, adjusted positioning and font size

--- a/index.html
+++ b/index.html
@@ -142,12 +142,7 @@
       <h1>
         <a name="DREAMS">hopes&dreams<img src="images/heart.png" /></a>
       </h1>
-      <div
-        class="speech"
-        style="font-size: 18px; padding: 15px 15px 20px 15px; float: left; word-wrap: break-word;"
-        width="150px"
-        height="150px"
-      >
+      <div class="hopes">
         I aspire to be a bonafide passionate web and game developer. Completely
         enamored with video games and technology ever since I was a kid, I
         decided one day I'd stop repressing my love for them and actually take
@@ -157,11 +152,11 @@
         I can't adopt to an ever-changing world if I don't try to dare to match
         its pace, after all. I also hope to visit Japan one day!
       </div>
-      <img src="images/keyboard.gif" style="opacity: 0.75;" class="blue" />
+      <div class="blue"><img src="images/keyboard.gif" /></div>
       <div class="purple">
-        <img src="images/draw.gif" style="opacity: 0.75;" />
+        <img src="images/draw.gif" />
       </div>
-      <div class="pink"><img src="images/jp.gif" style="opacity: 0.75;" /></div>
+      <div class="pink"><img src="images/jp.gif" /></div>
     </div>
   </body>
 </html>
