Repositioned blue picture, decreased h3 font size, set fixed width to hopes

--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
-    <h1 class="important">dana andrea espejo callejo</h1>
-    <hr width="35%" color="white" />
-    <h2 class="important">
-      "Inexperienced, heartless, but even so... Be beautiful."
-    </h2>
-    <img
-      src="images/violet.png"
-      class="photo"
-      usemap="#petals"
-      height="408px"
-      width="612px"
-    />
-    <map name="petals">
-      <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE" />
-      <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
-      <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
-      <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
-      <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
-    </map>
-    <hr width="50%" color="white" />
+    <header>
+      <h1 class="important">dana andrea espejo callejo</h1>
+      <hr width="35%" color="white" />
+      <h2 class="important">
+        "Inexperienced, heartless, but even so... Be beautiful."
+      </h2>
+      <img
+        src="images/violet.png"
+        class="photo"
+        usemap="#petals"
+        height="408px"
+        width="612px"
+      />
+      <map name="petals">
+        <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE" />
+        <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
+        <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
+        <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
+        <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
+      </map>
+      <hr width="50%" color="white" />
+    </header>
     <div class="profile">
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png" /></a>
@@ -140,7 +142,10 @@
     </p>
     <div class="dreams">
       <h1>
-        <a name="DREAMS">hopes&dreams<img src="images/heart.png" /></a>
+        <a name="DREAMS"
+          >hopes&dreams<img src="images/heart.png" />
+          <div class="blue"><img src="images/keyboard.gif" /></div
+        ></a>
       </h1>
       <div class="hopes">
         I aspire to be a bonafide passionate web and game developer. Completely
@@ -152,7 +157,6 @@
         I can't adopt to an ever-changing world if I don't try to dare to match
         its pace, after all. I also hope to visit Japan one day!
       </div>
-      <div class="blue"><img src="images/keyboard.gif" /></div>
       <div class="purple">
         <img src="images/draw.gif" />
       </div>
