Added bottom margin to hr, changed some div to section, added back to top button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
-    <header>
+    <header><a name="TOP"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
       <hr width="35%" color="white" />
       <h2 class="important">
@@ -27,7 +27,7 @@
       </map>
       <hr width="50%" color="white" />
     </header>
-    <div class="profile">
+    <section class="profile">
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png" /></a>
       </h1>
@@ -40,11 +40,11 @@
         lol. Questioning bisexual INFP insert-other-
         complicated-sounding-qualities-etc.
       </p>
-    </div>
+    </section>
     <h1 class="right">
       <a name="LDS"><img src="images/moonstar.png" />likes&dislikes</a>
     </h1>
-    <div class="lds">
+    <section class="lds">
       <table>
         <tr>
           <th>likes</th>
@@ -81,7 +81,7 @@
           </td>
         </tr>
       </table>
-    </div>
+    </section>
     <div class="hobbies">
       <h1>
         <a name="HOBBIES">hobbies<img src="images/naruto.png" /></a>
@@ -108,7 +108,7 @@
     <h1 class="right">
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
-    <div class="fam"></div>
+    <section class="fam"></div>
     <p>
       (From left to right) My dad, my mom, me (youngest), my sister's boyfriend,
       my sister (eldest), and my brother (middle child).
@@ -140,7 +140,7 @@
       what it means - appreciating the beauty of the feeling of "fleeting";
       everlasting change.
     </p>
-    <div class="dreams">
+    <section class="dreams">
       <h1>
         <a name="DREAMS"
           >hopes&dreams<img src="images/heart.png" />
@@ -162,5 +162,6 @@
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
     </div>
+    <div class="important back"><a href="#TOP">Back to top</a></div>
   </body>
 </html>
