--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </tr>
       </table>
     </section>
-    <div class="hobbies">
+    <section class="hobbies">
       <h1>
         <a name="HOBBIES">hobbies<img src="images/naruto.png" /></a>
       </h1>
@@ -104,11 +104,11 @@
       </table>
 
       <p class="corner">currently obsessed with: naruto, p5r, gacha games</p>
-    </div>
+    </section>
     <h1 class="right">
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
-    <section class="fam"></div>
+    <section class="fam"></section>
     <p>
       (From left to right) My dad, my mom, me (youngest), my sister's boyfriend,
       my sister (eldest), and my brother (middle child).
@@ -161,7 +161,7 @@
         <img src="images/draw.gif" />
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
-    </div>
+    </section>
     <div class="important back"><a href="#TOP">Back to top</a></div>
   </body>
 </html>
