Vertically centered header picture

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <header><a name="TOP"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
+    <div class=midhead>
       <hr width="35%" color="white" />
       <h2 class="important">
         "Inexperienced, heartless, but even so... Be beautiful."
@@ -26,8 +27,9 @@
         <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
       </map>
       <hr width="50%" color="white" />
+    </div>
     </header>
-    <section class="profile">
+    <section class="profile parallax">
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png" /></a>
       </h1>
@@ -44,7 +46,7 @@
     <h1 class="right">
       <a name="LDS"><img src="images/moonstar.png" />likes&dislikes</a>
     </h1>
-    <section class="lds">
+    <section class="lds parallax">
       <table>
         <tr>
           <th>likes</th>
@@ -82,7 +84,7 @@
         </tr>
       </table>
     </section>
-    <section class="hobbies">
+    <section class="hobbies parallax">
       <h1>
         <a name="HOBBIES">hobbies<img src="images/naruto.png" /></a>
       </h1>
@@ -108,7 +110,7 @@
     <h1 class="right">
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
-    <section class="fam"></section>
+    <section class="fam parallax"></section>
     <p>
       (From left to right) My dad, my mom, me (youngest), my sister's boyfriend,
       my sister (eldest), and my brother (middle child).
@@ -140,7 +142,7 @@
       what it means - appreciating the beauty of the feeling of "fleeting";
       everlasting change.
     </p>
-    <section class="dreams">
+    <section class="dreams parallax">
       <h1>
         <a name="DREAMS"
           >hopes&dreams<img src="images/heart.png" />
