--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
-    <header><a name="TOP"></a>
-      <h1 class="important">dana andrea espejo callejo</h1>
-    <div class=midhead>
-      <hr width="35%" color="white" />
-      <h2 class="important">
-        "Inexperienced, heartless, but even so... Be beautiful."
-      </h2>
-      <img
-        src="images/violet.png"
-        class="photo"
-        usemap="#petals"
-        height="408px"
-        width="612px"
-      />
-      <map name="petals">
-        <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE" />
-        <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
-        <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
-        <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
-        <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
-      </map>
-      <hr width="50%" color="white" />
+    <script src="script.js"></script>
+    <div id="overlay">
+      <div class="loader"></div>
     </div>
+    <header>
+      <a name="TOP"></a>
+      <h1 class="important">dana andrea espejo callejo</h1>
+      <div class="midhead">
+        <hr width="35%" color="white" />
+        <h2 class="important">
+          "Inexperienced, heartless, but even so... Be beautiful."
+        </h2>
+        <img
+          src="images/violet.png"
+          class="photo"
+          usemap="#petals"
+          height="408px"
+          width="612px"
+        />
+        <map name="petals">
+          <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE" />
+          <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
+          <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
+          <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
+          <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
+        </map>
+        <hr width="50%" color="white" />
+      </div>
     </header>
     <section class="profile parallax">
       <h1>
